--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+body {
+    background: #f5f5f5;
+}
 .header {
-    background-color: gray;
+    background-color: white;
     display: flex;
     padding: 20px;
     margin-bottom: 10px;
@@ -22,18 +25,20 @@
 }
 .content {
     position: relative;
-    width: 80%;
+    width: 70%;
     padding: 0 40px;
     margin-left: 10px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, .10);
 
-    background-color: darkgrey;
+    background-color: white;
 }
 
 .aside {
-    width: 20%;
+    width: 30%;
     height: auto;
 
-    background-color: silver;
+    box-shadow: 0 0 25px rgba(0, 0, 0, .05);
+    background-color: white;
 
 }
 
