--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+html {
+    height: 100%;
+}
 body {
     background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
 }
 .header {
     background-color: white;
@@ -9,6 +16,7 @@ body {
     justify-content: space-between;
     align-items: center;
 
+    flex: 0 0 auto;
     border-radius: 5px;
     box-shadow: silver;
 }
@@ -22,6 +30,7 @@ body {
 .main {
     display: flex;
     flex-direction: row;
+    flex: 1 0 auto;
 }
 .content {
     position: relative;
@@ -29,19 +38,20 @@ body {
     padding: 0 40px;
     margin-left: 10px;
     box-shadow: 0 0 25px rgba(0, 0, 0, .10);
-
     background-color: white;
 }
 
 .aside {
     width: 30%;
-    height: auto;
+
 
     box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
 
 }
-
+.footer {
+    flex: 0 0 auto;
+}
 .form {
     align-items: center;
 }
