--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,18 @@ body {
     flex-direction: column;
 
     height: 100%;
+    margin: 0;
+
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sansSerif, "Apple Color Emogji", "Segoe UI Emoji";
+    color: #000000;
+    line-height: 1.5;
 }
 .header {
     background-color: white;
     display: flex;
     padding: 20px;
-    margin-bottom: 10px;
+    margin: 10px;
     justify-content: space-between;
     align-items: center;
 
@@ -31,19 +37,23 @@ body {
     display: flex;
     flex-direction: row;
     flex: 1 0 auto;
+
+    margin: 10px;
 }
 .content {
     position: relative;
     width: 70%;
     padding: 0 40px;
     margin-left: 10px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, .10);
+    box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
 }
 
 .aside {
     width: 30%;
-
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
 
     box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
@@ -51,14 +61,18 @@ body {
 }
 .footer {
     flex: 0 0 auto;
+    margin: 5px 10px;
 }
 .form {
-    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 .btn {
     display: inline-block;
     vertical-align: top;
-    padding: 15px 10px;
+    padding: 10px;
+    width: 50%;
+    margin: 10px 0;
 
     background: #7a7a7a;
     border: 0;
@@ -67,7 +81,7 @@ body {
     font-family: inherit;
     font-size: 15px;
     line-height: 1.1;
-    font-weight: 300;
+    font-weight: 400;
     color: black;
     text-decoration: none;
     cursor: pointer;
