--- a/styles.css
+++ b/styles.css
@@ -42,15 +42,22 @@ body {
 }
 .content {
     position: relative;
-    width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-basis: auto;
+
+    width: 80%;
     padding: 0 40px;
 
     box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
 }
+.content-arrow {
 
+}
 .aside {
-    width: 30%;
+    width: 20%;
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -104,3 +111,10 @@ body {
      color: white;
      background-color: #ff2513;
  }
+.icon {
+    width: 40px;
+    height: 40px;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: #ADB9CA;
+}
