--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ body {
     flex-direction: row;
     justify-content: space-around;
 
-    width: 80%;
-    padding: 0 40px;
+    width: 60%;
+    /*padding: 0 40px;*/
 
     box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
@@ -59,31 +59,39 @@ body {
 }
 .content-arrow {
     padding-top: 200px;
-    /*align-items: center;*/
+    margin-top: 0;
+    flex-grow: 1;
+}
+.content-arrow:hover,
+.content-arrow:focus {
+    background-color: #C0C6CD;
+    opacity: 0.7;
+}
+.content-arrow:active {
+    background-color: #C0C6CD;
+    opacity: 1;
 }
 .aside {
-    width: 20%;
+    width: 40%;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-flow: column wrap;
     padding: 10px;
     margin-right: 20px;
 
     box-shadow: 0 0 25px rgba(0, 0, 0, .05);
     background-color: white;
+}
 
-}
-.footer {
-    flex: 0 0 auto;
-    margin: 5px 20px;
-}
 .aside-form {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
 }
-
+.aside-list {
+    display: flex;
+    flex-flow: row wrap;
+}
 .aside-btn {
     align-items: center;
     justify-content: center;
@@ -91,10 +99,10 @@ body {
 
     text-align: center;
     text-decoration: none;
-    border: solid 1px currentColor;
+    border: solid 1px #C0C6CD;
     border-radius: 4px;
-    padding: 5px 20px;
-    color: #bc1423;
+    padding: 5px 15px;
+    color: black;
     background-color: white;
     /*border-color: currentColor;*/
 
@@ -108,6 +116,19 @@ body {
 
     transition: background .1s linear, color .1s linear;
 }
+/*.aside-btn:nth-child(odd) {
+    border-top: solid 1px #C0C6CD;
+}
+.aside-btn:nth-child(even) {
+    border: solid 1px #C0C6CD;
+    border-bottom: none;
+}
+.aside-btn:nth-child(4n) {
+    border-right: none
+}
+.aside-btn:nth-last-child(-n+4) {
+    border-bottom: solid 1px #C0C6CD;
+}*/
 .aside-btn:active {
     transform: translateY(1px);
     filter: saturate(150%);
@@ -149,5 +170,14 @@ body {
     height: 40px;
     stroke-width: 0;
     stroke: currentColor;
-    fill: #dddddd;
+    fill: #C0C6CD;
+}
+.content-arrow:hover .icon {
+    stroke: white;
+    fill: white;
+}
+
+.footer {
+    flex: 0 0 auto;
+    margin: 5px 20px;
 }
